<resources>
    <string name="app_name">My Thread</string>
    <string name="thread">Thread</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="tab_text_1">Movies</string>
    <string name="tab_text_2">TV Show</string>
    <string name="title">title</string>
    <string name="dateline">release_date</string>
    <string name="description">description</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="release_date">release_date</string>
    <string name="synopsis">Synopsis</string>
    <string name="cast">Casts</string>
    <string name="stars">Stars</string>
    <string name="image_poster">Image Poster</string>
    <string name="now_playing">Now Playing</string>
    <string name="upcoming">Upcoming</string>
    <string name="review">Review</string>
    <string name="favorite">Favorite</string>
    <string name="title_activity_favorite">FavoriteActivity</string>
    <string name="length">Length</string>
</resources>
