<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:fillViewport="true">
<androidx.constraintlayout.widget.ConstraintLayout
												   android:layout_width="match_parent"
												   android:layout_height="match_parent"
												   android:descendantFocusability="blocksDescendants">
	
	<RelativeLayout
			android:id="@+id/relativeLayout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="1.0"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			android:background="@color/colorTextTertiary">
		
		<ImageView
				android:id="@+id/image_poster"
				android:layout_width="match_parent"
				android:layout_height="250dp"
				android:adjustViewBounds="true"
				android:contentDescription="@string/image_poster"
				android:scaleType="fitXY"
				android:src="@color/colorImage"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent"/>
		
		<RatingBar
				android:id="@+id/rating"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_below="@id/image_poster"
				android:layout_marginTop="-48dp"
				android:numStars="5"
				android:rating="2"
				android:scaleX=".5"
				android:scaleY=".6"
				android:background="#4D000000"
				android:progressBackgroundTint="@color/colorWhite"
				android:outlineAmbientShadowColor="@color/colorAccent"
				app:layout_constraintBottom_toTopOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
		/>
	
	</RelativeLayout>
	
	<TextView
			android:id="@+id/text_date"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/relativeLayout"
			android:layout_marginStart="4dp"
			android:layout_marginTop="4dp"
			android:layout_marginEnd="8dp"
			android:gravity="right"
			android:text="@string/release_date"
			android:textAlignment="gravity"
			android:textSize="12sp"
			android:textStyle="italic"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.0"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/relativeLayout"/>
	
	<TextView
			android:id="@+id/textViewSynopsis"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/relativeLayout"
			android:layout_marginStart="8dp"
			android:layout_marginTop="3dp"
			android:layout_marginEnd="8dp"
			android:text="@string/synopsis"
			android:textColor="@color/colorPrimaryDark"
			android:textSize="18sp"
			android:textStyle="bold"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.0"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/text_date"/>
	
	<TextView
			android:id="@+id/text_description"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			android:lineSpacingExtra="4sp"
			android:paddingRight="5dp"
			android:paddingLeft="5dp"
			android:gravity="center_horizontal"
			android:textAlignment="gravity"
			android:textColor="@color/colorText"
			android:textSize="16sp"
			app:layout_constraintEnd_toEndOf="@+id/textViewSynopsis"
			app:layout_constraintHorizontal_bias="0.0"
			app:layout_constraintStart_toStartOf="@+id/textViewSynopsis"
			app:layout_constraintTop_toBottomOf="@+id/textViewSynopsis"
			tools:text="@string/description"/>
	<TextView
		android:id="@+id/textLength"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/relativeLayout"
		android:layout_marginStart="8dp"
		android:layout_marginTop="3dp"
		android:layout_marginEnd="8dp"
		android:text="@string/length"
		android:textColor="@color/colorPrimaryDark"
		android:textSize="18sp"
		android:textStyle="bold"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/text_description"/>

	<TextView
		android:id="@+id/text_length"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:lineSpacingExtra="4sp"
		android:paddingRight="5dp"
		android:paddingLeft="5dp"
		android:textColor="@color/colorText"
		android:textSize="16sp"
		app:layout_constraintEnd_toEndOf="@+id/textLength"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="@+id/textLength"
		app:layout_constraintTop_toBottomOf="@+id/textLength"
		 />
	<TextView
			android:id="@+id/textViewReview"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginStart="8dp"
			android:layout_marginTop="18dp"
			android:layout_marginEnd="8dp"
			android:gravity="start"
			android:text="@string/cast"
			android:textColor="@color/colorAccent"
			android:textSize="18sp"
			android:textStyle="bold"
			app:layout_constraintStart_toStartOf="@+id/text_length"
			app:layout_constraintTop_toBottomOf="@+id/text_length"/>
	<LinearLayout
			android:id="@+id/line1"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="5dp"
			android:background="@color/colorTextTertiary"
			android:orientation="vertical"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="1.0"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/textViewReview"
			app:layout_constraintVertical_bias="0.003">
		<ProgressBar
				android:id="@+id/progress_bar"
				style="?android:attr/progressBarStyle"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginStart="8dp"
				android:layout_marginTop="8dp"
				android:visibility="gone"
				app:layout_constraintBottom_toBottomOf="@+id/line1"
				app:layout_constraintEnd_toEndOf="@+id/line1"
				app:layout_constraintStart_toStartOf="@+id/line1"
				app:layout_constraintTop_toTopOf="@+id/line1"
				tools:visibility="visible"/>
		<androidx.recyclerview.widget.RecyclerView
			android:id="@+id/rv_cast"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginStart="4dp"
			android:layout_marginTop="5dp"
			android:layout_marginEnd="4dp"
			android:layout_marginBottom="8dp"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="1.0"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/text_description"
			app:layout_constraintVertical_bias="0.003"
			tools:listitem="@layout/items_cast"/>

	</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>